<resources>
    <string name="app_name">Mnemos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_flashcards">My flashcards</string>
    <string name="theme_label">%s THEME</string>
    <string name="filter_type_show_all">all</string>
    <string name="filter_type_search_results">search results</string>
    <string name="filter_type_favorites">only favourites</string>
    <string name="filter_type_non_empty">non-empty</string>
    <string name="filter_sort_newest">by newest</string>
    <string name="filter_sort_oldest">by oldest</string>
    <string name="filter_sort_asc">A-Z order</string>
    <string name="filter_sort_desc">Z-A order</string>
    <string name="menu_home">Home</string>
    <string name="menu_import">Import</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_profil">Profile</string>
    <string name="categories">categories</string>
    <string name="packs">packs</string>
    <string name="learning_time">learning time</string>
    <string name="showing">"Showing: "</string>
    <string name="search">Search</string>
    <string name="new_category">New category</string>
    <string name="Category_name">Category name</string>
    <string name="category_name">category name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="description">description</string>
    <string name="category_preview_image">Preview image (optional, recommended)</string>
    <string name="category_image_select">Select category image</string>
    <string name="Save">Save</string>
    <string name="category_item_description_package">package</string>
    <string name="edit_category">Edit category</string>
    <string name="delete_category">Delete category</string>
    <string name="add_to_favorites">Add to favourites</string>
    <string name="remove_from_favories">Remove from favourites</string>
    <string name="update_category">Update category</string>
    <string name="delete_category_dialog_title">category</string>
    <string name="Delete">Delete</string>
    <string name="delete_package_dialog_title">package</string>
    <string name="delete_category_message">Are you sure you want to delete the category %s?</string>
    <string name="Cancel_button">Cancel</string>
    <string name="Yes_delete_button">Yes, delete</string>
    <string name="edit_package">Edit package</string>
    <string name="delete_package">Delete package</string>
    <string name="delete_package_message">Are you sure you want to delete the package %s, with all cards in it?</string>
    <string name="new_card_pack">New card pack</string>
    <string name="Package_name">Package name</string>
    <string name="package_name">package name</string>
    <string name="cards">cards</string>
    <string name="package_info_message">📂 %1$d cards\n🧠 last learned: %2$s</string>
    <string name="card_builder">Card builder</string>
    <string name="add_new_card">Add new card</string>
    <string name="Front">Front</string>
    <string name="Back">Back</string>
    <string name="text_block">Text</string>
    <string name="image_block">Image</string>
    <string name="formula_block">Formula</string>
    <string name="new_image">New image</string>
    <string name="app_image">App image</string>
    <string name="Mode">Mode</string>
    <string name="cards_order">Cards order</string>
    <string name="learn_button">Learn</string>
    <string name="level_of_confidense">LEVEL OF CONFIDENCE</string>
    <string name="FRONT">FRONT</string>
    <string name="BACK">BACK</string>
    <string name="finish_learning_session">Finish learning session</string>
    <string name="spent_time">spent time</string>
    <string name="success_rate">success rate</string>
    <string name="reviewed_cards">reviewed cards</string>
    <string name="mode">mode</string>
    <string name="learning_session_overview">Learning session overview</string>
    <string name="Pause">Pause</string>
    <string name="pause_dialog_text">Your learning session is paused.\nWould you like to resume?</string>
    <string name="end_learning_session">End learning session</string>
    <string name="resume_learning_session">Resume</string>
    <string name="import_flashcards">Import flashcards</string>
    <string name="URL">URL</string>
    <string name="enter_link">Enter your google sheet link:</string>
    <string name="select_category">Select your category:</string>
    <string name="select_package">Select your package:</string>
    <string name="first_select_category">First select category</string>
    <string name="select_package_spinner">select package</string>
    <string name="please_select_a_package">Please select a package</string>
    <string name="please_select_category">Please select a category</string>
    <string name="invalid_URL_format">Invalid URL format</string>
    <string name="URL_required">URL is required!</string>
    <string name="internet_connection_error">Internet connection is required!</string>
    <string name="importing_spinner">Importing flashcards...</string>
    <string name="last_activities">LAST ACTIVITIES</string>
    <string name="next_activities">NEXT ACTIVITIES</string>
    <string name="total_learning_time">total learning time</string>
    <string name="frequently_learned">frequently learnt</string>
    <string name="activities_for_current_week">activities for current week</string>
    <string name="activities_chart_label">bar height: total time | label: count activities</string>
    <string name="chart_monday">Mon</string>
    <string name="chart_tuesday">Tue</string>
    <string name="chart_wednesday">Wed</string>
    <string name="chart_thursday">Thu</string>
    <string name="chart_friday">Fri</string>
    <string name="chart_saturday">Sat</string>
    <string name="chart_sunday">Sun</string>
    <string name="add_task">Add task</string>
    <string name="custom_task_name">Custom task name</string>
    <string name="task_description">description</string>
    <string name="Date">Date</string>
    <string name="Category">Category</string>
    <string name="Package">Package</string>
    <string name="click_select_date">click to select a date</string>
    <string name="no_packages_in_this_category">No packages in this category</string>
    <string name="required">required</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="Today">Today</string>
    <string name="cards_to_review">" cards to review"</string>
    <string name="Category_dots">"Category: "</string>
    <string name="FREE_MODE_WITH_LEARNING">free mode with rating</string>
    <string name="FREE_MODE">free mode</string>
    <string name="ALGORITHM">algorithm</string>
    <string name="created_at">created at</string>
    <string name="random">random</string>
    <string name="all_categories">all categories</string>
    <string name="all_packages">all packages</string>
    <string name="non_empty_categories">non-empty categories</string>
    <string name="non_empty_packages">non-empty packages</string>
    <string name="only_favourites">only favourites</string>
    <string name="created_at_newest_first">by created at - newest first</string>
    <string name="created_at_oldest_first">by created at - oldest first</string>
    <string name="A_Z_order">A-Z order</string>
    <string name="Z_A_order">Z-A order</string>
    <string name="filter_button">Filter</string>
    <string name="Show">Show</string>
    <string name="Sort">Sort</string>
    <string name="packages">packages</string>
    <string name="Update">Update!</string>
    <string name="welcome_text_update">Update your settings</string>
    <string name="enter_username">Enter your username</string>
    <string name="select_language">Select language</string>
    <string name="customize_app_theme">Customize your app theme</string>
    <string name="set_pomodoro_time">Set pomodoro time</string>
    <string name="start_learning_journey">Start your learning journey!</string>
    <string name="settings_updated_toas">Settings were updated!</string>
    <string name="never">never</string>
    <string name="import_instruction_title">Import instructions</string>
    <string name="import_instructions_1">First, you need to create a new Google Sheets table on your device.</string>
    <string name="import_instructions_2">In the table, the first column represents the front part of the card, and the second column represents the back part. The content can only be text.</string>
    <string name="import_instructions_3">Once you are ready, you need to publish the spreadsheet to make it public, and then paste the link into the application. (File -> Share -> Share with others -> Anyone with the link -> Copy link)</string>
    <string name="import_instructions_4">The system will automatically create your cards with text blocks, which you can edit later.</string>
    <string name="Ok">Ok</string>
    <string name="edit_cards">edit cards</string>
    <string name="my_profile">My profile</string>
    <string name="settings_click_to_change">Settings (click to change)</string>
    <string name="settings_profile_informations">Profile informations</string>
    <string name="settings_actions">Actions</string>
    <string name="hello">Hello</string>
    <string name="reset_app_description">This action will reset the application to factory settings, deleting all of your content. If you confirm, you will need to restart the app.</string>
    <string name="reset_app_title">Are you sure?</string>
    <string name="username">username</string>
    <string name="language">language</string>
    <string name="theme">theme</string>
    <string name="pomodoro_time">pomodoro time</string>
    <string name="reg_date">you have been using the app since</string>
    <string name="imported_cards">imported card packages</string>
    <string name="error_import">An error occurred during the import. Please read the instructions again.</string>
    <string name="add_category_info">Try to add a new category!\n⬇</string>
    <string name="click_to_select_image">Click to select an image</string>
    <string name="image_selector">App image selector</string>
    <string name="selected">selected</string>
    <string name="show_app_tutorial">show app tutorial</string>
    <string name="app_copyright">© design and app: Peter Opál</string>
    <string name="delete_all_flashcards">delete all flashcards</string>
    <string name="delete_all_flashcards_description">it will remove all categories, packages, cards, activities, your tasks and uploaded images</string>
    <string name="reset_app_small_description">restores the app to its original state, like a fresh install</string>
    <string name="reset_app">reset app</string>
    <string name="close">close</string>
    <string name="Activities">Activities</string>
    <string name="Time">time</string>
    <string name="info_session_verview_free_mode">The success rate is calculated based on the cards that have been reviewed.</string>
    <string name="info_session_verview_other_mode">The success rate is determined according to the certainty level of each card. Ratings from 0 to 2 indicate an unsuccessful review, contributing 0 to the success rate. A rating of 3 has a weight of 0.33, a rating of 4 has a weight of 0.67, and a rating of 5 has a weight of 1.</string>
    <string name="content_editor">Content editor</string>
    <string name="formula_error">You have an empty placeholder, please make the formula correct!</string>
    <string name="tutorial_1_1">Mnemos helps you learn effectively using flashcards.</string>
    <string name="tutorial_1_2">The app\'s slogan:\n Learn and repeat until the cards are stored in your long-term memory.</string>
    <string name="tutorial_1_3">In the next steps, you will find some useful information about how to use the app.</string>
    <string name="Welcome">Welcome %s!</string>
    <string name="next">next</string>
</resources>