<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F2F2"
    tools:context=".AddTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/addTaskTool">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/addTaskTool"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#F5F2F2"
            app:title="@string/add_task"
            app:titleTextColor="@color/black" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/custom_task_name" />

        <EditText
            android:id="@+id/customTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_edittext_1"
            android:ems="10"
            android:hint="@string/task_description"
            android:inputType="text"
            android:padding="12dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/Category" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/background_spinner"
            android:dropDownHeight="200dp"
            android:padding="12dp" />

        <TextView
            android:id="@+id/categoryError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/please_select_category"
            android:textColor="#FF0000"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/Package" />

        <Spinner
            android:id="@+id/packageSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/background_spinner"
            android:padding="12dp" />

        <TextView
            android:id="@+id/packageError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/please_select_a_package"
            android:textColor="#FF0000"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/Date" />



        <Button
            android:id="@+id/dateSelectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="15dp"
            android:elevation="0dp"
            android:fontFamily="@font/inter"
            android:stateListAnimator="@null"
            android:text="@string/click_select_date"
            android:textFontWeight="100"
            android:textAllCaps="false"
            app:backgroundTint="#6F6E6E" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>