<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".custom_dialog.FilterDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/filterTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:gravity="center"
            android:letterSpacing="0.15"
            android:text="Filter categories"
            android:textAllCaps="true"
            android:textSize="28sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray" />

        <RadioGroup
            android:id="@+id/show_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/Show" />

            <RadioButton
                android:id="@+id/show_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:tag="filter_type_show_all"
                android:text="all categories" />

            <RadioButton
                android:id="@+id/show_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:tag="filter_type_favorites"
                android:text="@string/only_favourites" />

            <RadioButton
                android:id="@+id/show_non_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:tag="filter_type_non_empty"
                android:text="Non-empty categories" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <RadioGroup
            android:id="@+id/sort_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/Sort" />

            <RadioButton
                android:id="@+id/sort_by_newest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:tag="filter_sort_newest"
                android:text="@string/created_at_newest_first" />

            <RadioButton
                android:id="@+id/sort_by_oldest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:tag="filter_sort_oldest"
                android:text="@string/created_at_oldest_first" />

            <RadioButton
                android:id="@+id/sort_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:tag="filter_sort_asc"
                android:text="@string/A_Z_order" />

            <RadioButton
                android:id="@+id/sort_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:tag="filter_sort_desc"
                android:text="@string/Z_A_order" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0"
                android:background="@drawable/cancel_button"
                android:elevation="0dp"
                android:stateListAnimator="@null"
                android:text="@string/Cancel_button"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/saveFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/start_learning_button"
                android:elevation="0dp"
                android:stateListAnimator="@null"
                android:text="@string/filter_button"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>