<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F2F2"
    tools:context=".AddCategoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/addCategoryToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#F5F2F2"
            app:title="@string/new_category"
            app:titleTextColor="@color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/Category_name" />

        <EditText
            android:id="@+id/categoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_edittext_1"
            android:fontFamily="@font/inter"
            android:hint="@string/category_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/description_optional" />

        <EditText
            android:id="@+id/categoryDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_edittext_1"
            android:fontFamily="@font/inter"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLength="150"
            android:padding="12dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/category_preview_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/categoryImage"
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/darker_gray"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <Button
                android:id="@+id/selectFileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="15dp"
                android:elevation="0dp"
                android:fontFamily="@font/inter"
                android:stateListAnimator="@null"
                android:text="@string/category_image_select"
                android:textAllCaps="false"
                app:backgroundTint="#6F6E6E" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
